# AI_GENERATION

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.server.yml
backend/python-worker/: README.md  pyproject.toml
backend/python-worker/app/: __init__.py  adaptive_concurrency.py  choice_layout_assignment.py  export_service.py  image_placement.py  image_placement_multimodal.py  import_services.py  llm_splitter.py  main.py  math_normalizer.py  ocr_execution.py  ocr_flow.py  ocr_processing.py  question_boundary.py  question_canonicalization.py  question_layout.py  question_markdown.py  visual_repair.py  worker_base.py  worker_routes.py
backend/python-worker/app/ai/: __init__.py  runtime.py
backend/python-worker/app/canonicalization/: __init__.py  service.py
backend/python-worker/app/contracts/: __init__.py  (+1 more)
backend/python-worker/tests/: test_adaptive_concurrency.py  test_ai_module_parity.py  test_choice_layout_assignment.py  test_export_service.py  test_image_placement.py  test_image_placement_multimodal.py  test_import_services.py  test_llm_splitter.py  test_mineru_ocr_adapter.py  test_ocr_flow.py  test_ocr_postprocess_contracts.py  test_ocr_postprocess_pipeline.py  test_ocr_processing.py  test_question_boundary.py  test_question_canonicalization.py  test_question_layout.py  test_question_markdown.py  test_standardization_module_parity.py  test_visual_repair.py  test_worker_canonicalization_route.py  test_worker_configuration_contract.py  test_worker_runtime_boundaries.py  test_worker_v1_contract.py
(+321 files in other folders)
